- added user login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="login_error_message">Incorrect Username or Password</string>
     <string name="login_error_title">Login Error</string>
     <string name="add_item">Add New Item</string>
+    <string name="action_logout">Logout</string>
 
 </resources>
