added task activitity, needs layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,6 @@
     <color name="white">#FFFFFF</color>
     <string name="title_activity_task">TaskActivity</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="title_activity_task_main">TaskMainActivity</string>
 
 </resources>
